Refronte du site

--- a/index.html
+++ b/index.html
@@ -34,22 +34,19 @@
     <!-- CSS Local -->
     <link rel="stylesheet" href="index.css">
     <!-- JS Local -->
-    <script src="Scripts/loader.js" defer></script>
-    <script src="Scripts/toggleMode.js" defer></script>
-    <script src="Scripts/nav.js" defer></script>
-    <script src="Scripts/experience.js" defer></script>
-
-    <link rel="stylesheet" href="styles/splide-core.min.css">
-    <script src="Scripts/splide.min.js"></script>
+    <!-- <script src="scripts/loader.js" defer></script> -->
+    <script src="scripts/toggleMode.js" defer></script>
+    <script src="scripts/nav.js" defer></script>
+    <script src="scripts/experience.js" defer></script>
 </head>
 
 <body>
-
+<!-- 
     <div class="loader">
         <div class="loader-load"></div>
-        <!-- <div class="loader-bloc loader-left"></div> -->
+        <div class="loader-bloc loader-left"></div>
         <div class="loader-bloc loader-right"></div>
-    </div>
+    </div> -->
 
     <div id="modal">
         <div class="card-don">
@@ -85,7 +82,6 @@
             <li><a href="#skillest">Compétences</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#experience">Expérience</a></li>
-            <li><a href="#education">Education</a></li>
             <li><a href="#other">Autres</a></li>
             <li>
                 <a href="https://drive.google.com/file/d/1KKmC-Wo-mTnAq8GlhFldHt2WBnuElt2B/view?usp=sharing" target="_blank">
@@ -129,7 +125,6 @@
             <li><a href="#skillest">Compétences</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#experience">Expérience</a></li>
-            <li><a href="#education">Education</a></li>
             <li><a href="#other">Autres</a></li>
         </ul>
         <ul class="navigation-socials">
@@ -308,7 +303,7 @@
                 <h2>Moment venu de vous parler de mon expérience professionnelle</h2>
             </div>
             <div class="experience-cards-container">
-                <div class="faq-card active active">
+                <div class="faq-card active">
                     <div class="question">
                         <h3>TRAVAIL</h3>
                         <img src="img/arrow-down.svg" alt="arrow-down">
@@ -436,6 +431,9 @@
                 <a href="https://login-page1.vercel.app/" target="_blank">
                     <img src="projets/loginpage-1.png" alt="loginpage-1">
                 </a>
+                <a href="https://github.com/ln-dev7/LN-Gram/" target="_blank">
+                    <img src="projets/clone-ui-ig.png" alt="clone-ui-ig">
+                </a>
                 <a href="https://github.com/ln-dev7/ln-react-blog" target="_blank">
                     <img src="projets/ln-react-blog.png" alt="ln-react-blog">
                 </a>
@@ -469,6 +467,9 @@
                 <a href="https://star-wars-lime.vercel.app/" target="_blank">
                     <img src="projets/starwars.png" alt="starwars">
                 </a>
+                <a href="https://mobile-club-home.vercel.app/" target="_blank">
+                    <img src="projets/mobileclub.png" alt="mobileclub">
+                </a>
                 <a href="https://skillex-psi.vercel.app/" target="_blank">
                     <img src="projets/skillex.png" alt="skillex">
                 </a>
@@ -491,90 +492,6 @@
                     <img src="projets/loopstudio.png" alt="loopstudio">
                 </a>
             </div>
-            <div class="experience-cards-mobile">
-                <div class="mobile-card">
-                    <section class="splide">
-                        <div class="splide__track">
-                              <ul class="splide__list">
-                                  <li class="splide__slide"><img src="mockup/lngram-m-5.png" alt="mockup"></li>
-                                  <li class="splide__slide"><img src="mockup/lngram-m-1.png" alt="mockup"></li>
-                                  <li class="splide__slide"><img src="mockup/lngram-m-2.png" alt="mockup"></li>
-                                  <li class="splide__slide"><img src="mockup/lngram-m-3.png" alt="mockup"></li>
-                                  <li class="splide__slide"><img src="mockup/lngram-m-4.png" alt="mockup"></li>
-                              </ul>
-                        </div>
-                    </section>
-                    <div class="card-text">
-                        <h2>Clone de l' UI d' Instagram</h2>
-                    <a href="https://github.com/ln-dev7/LN-Gram" target="_blank"><button>Code source</button></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="education" id="education">
-        <div class="education-cards">
-            <div class="education-cards-title">
-                <h1>Mon éducation</h1>
-                <h2>Ici je vous présente mon parcours scolaire et académique.</h2>
-            </div>
-            <div class="education-cards-container">
-                <div class="education-cards-container-card">
-                    <div class="education-cards-container-card-img">
-                        <img src="img/ccnb.png" alt="Clirap">
-                    </div>
-                    <div class="education-cards-container-card-container">
-                        <h3>2021 • <i>en cours</i></h3>
-                        <p class="ecucation-cards-container-card-container-description">
-                            <b>DEC (Diplôme d'études collégiales) TECHNOLOGIE DE L'INFORMATION ET DES COMMUNICATIONS
-                                (TIC)</b>
-                            <p>Institut Universitaire de la Côte • Douala</p>
-                            <h4>Diplôme délivré par le Collège communautaire du Nouveau-Brunswick (CCNB-Canada)</h4>
-                        </p>
-                    </div>
-                </div>
-                <div class="education-cards-container-card">
-                    <div class="education-cards-container-card-img">
-                        <img src="img/clirap.png" alt="Clirap">
-                    </div>
-                    <div class="education-cards-container-card-container">
-                        <h3>2020 • 2021</h3>
-                        <p class="ecucation-cards-container-card-container-description">
-                            <b><a href="https://drive.google.com/file/d/19BSao3K4I22ht_T8neRqURQU7KzvXidO/view?usp=sharing"
-                                    target="_blank">B2 - LANGUE ITALIENNE</a></b>
-                            <p>Clirap Educationnal • Yaoundé</p>
-                            <h4>Diplôme délivré par l' Université de Rome 3 ( en Italie )</h4>
-                        </p>
-                    </div>
-                </div>
-                <div class="education-cards-container-card">
-                    <div class="education-cards-container-card-img">
-                        <img src="img/uy1.png" alt="UY1">
-                    </div>
-                    <div class="education-cards-container-card-container">
-                        <h3>2019 • 2020</h3>
-                        <p class="ecucation-cards-container-card-container-description">
-                            <b>INFORMATIQUE NIVEAU 1</b>
-                            <p>Université de Yaoundé 1 • Yaoundé</p>
-                        </p>
-                    </div>
-                </div>
-                <div class="education-cards-container-card">
-                    <div class="education-cards-container-card-img">
-                        <img src="img/lybibaf-ndg.png" alt="Lybibaf Ndiengdam">
-                    </div>
-                    <div class="education-cards-container-card-container">
-                        <h3>2018 • 2019</h3>
-                        <p class="ecucation-cards-container-card-container-description">
-                            <b><a href="https://drive.google.com/file/d/1zj25lC7wQiTWIWn_ZrDjoAzrn3VzSiiA/view?usp=sharing"
-                                    target="_blank">BACCALAUREAT C</a></b>
-                            <p>Lycée bilingue de Bafoussam ndiengdam • Bafoussam</p>
-                            <h4>Diplôme délivré par le MINESEC</h4>
-                        </p>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -582,34 +499,34 @@
         <div class="other-container">
             <div class="other-container-certification">
                 <h1>Mes certifications</h1>
-                <h2>J'ai eu à faire des formations en ligne où j'ai acquis la majorité des bases de mes connaissances
-                    sur le web. <i>Consultez les en cliquant sur l'image :)</i> </h2>
+                <h2>J'ai eu à faire des formations certifiantes en ligne où j'ai acquis la majorité des bases de mes connaissances sur le web, notamment sur :</h2>
                 <div class="cert">
                     <a href="https://drive.google.com/drive/folders/1mTQ98vR_POncLTRs8jGD4eTJoI5U5jHU?usp=sharing" target="_blank">
-                        <img src="img/oc.png" alt="Certifications OpenClassrooms">
-                        <span>Consultez mes certifications OpenClassrooms</span>
+                        <div class="cert-card">
+                            <span>OpenClassrooms</span>
+                        </div>
                     </a>
-
                     <a href="https://drive.google.com/drive/folders/1iBz8zi92uPJse4o6n4iwDDvQd-atU6OH" target="_blank">
-                        <img src="img/udemy.jpg" alt="Certifications Udemy">
-                        <span>Consultez mes certifications Udemy</span>
+                        <div class="cert-card">
+                            <span>Udemy</span>
+                        </div>
                     </a>
                 </div>
             </div>
             <div class="other-container-contact">
-                <h1>Contactez moi</h1>
-                <h2>Je demeure disponible à toutes discussions.</h2>
-                <div>
-                    <a href="mailto:leonelngoya@gmail.com" target="_blank">
-                        <button>GO !!!</button>
-                    </a>
+                <div class="contact-card">
+                    <img src="person/leonel.jpg" alt="leonel ngoya">
+                    <div class="card-text">
+                            <a href="mailto:leonelngoya@gmail.com" target="_blank">
+                            Message
+                            </a>
+                            <a href="https://drive.google.com/file/d/1KKmC-Wo-mTnAq8GlhFldHt2WBnuElt2B/view?usp=sharing" target="_blank" class="other-container-cv">Mon CV</a>
+                    </div>
                 </div>
-                <a href="https://drive.google.com/file/d/1KKmC-Wo-mTnAq8GlhFldHt2WBnuElt2B/view?usp=sharing" target="_blank" class="other-container-cv">TELECHARGER MON CV</a>
             </div>
         </div>
     </div>
 
-    <p class="thanks">Un grand merci a <a href="https://grafikart.fr/" target="_blank">Grafikart</a> et a <a href="https://openclassrooms.com/fr/" target="_blank">Openclassrooms</a> pour mes connaissances acquises</p>
     <footer class="footer" id="footer">
         <div class="footer-container">
             <h2>Vous pouvez me suivre sur les réseaux sociaux</h2>
@@ -657,13 +574,6 @@
             </svg>
         </div>
     </div>
-
-    <script>
-        var elms = document.getElementsByClassName( 'splide' );
-        for ( var i = 0; i < elms.length; i++ ) {
-            new Splide( elms[ i ] ).mount();
-        }
-    </script>
 </body>
 
 </html>
