--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <script src="scripts/experience.js" defer></script>
 </head>
 
-<body>
+<body class="dark-mode">
 <!-- 
     <div class="loader">
         <div class="loader-load"></div>
@@ -215,6 +215,9 @@
     </div>
 
     <div class="skillest" id="skillest">
+        <div class="rotate-card">
+            <div class="rotate-content"></div>
+        </div>
         <div class="skillest-cards">
             <div class="skillest-cards-title">
                 <h1>Mes compétences</h1>
@@ -294,6 +297,9 @@
     </div>
 
     <div class="experience" id="experience">
+        <div class="rotate-card">
+            <div class="rotate-content"></div>
+        </div>
         <div class="experience-cards">
             <p class="experience-cards-citation">
                 La connaissance s'acquiert par l'expérience, tout le reste n'est que de l'information.<br> • Albert Einstein
@@ -496,6 +502,9 @@
     </div>
 
     <div class="other" id="other">
+        <div class="rotate-card">
+            <div class="rotate-content"></div>
+        </div>
         <div class="other-container">
             <div class="other-container-certification">
                 <h1>Mes certifications</h1>
