--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="about" id="about">
         <h1 class="about-title">À propos de moi</h1>
         <h2 class="about-about">
-            Je suis un étudiant de 18 ans et <b>développeur front-end web et flutter</b> vivant au Cameroun.<br> Je me veux d'être le plus créatif possible en utilisant mon imagination et mes capacités intellectuelles dans mon travail.<br> Mon but est de rendre un site
+            Je suis un <b>développeur front-end </b> agé de 18 ans et vivant au Cameroun.<br> Je me veux d'être le plus créatif possible en utilisant mon imagination et mes capacités intellectuelles dans mon travail.<br> Mon but est de rendre un site
             le plus beau et attirant possible.
         </h2>
         <h2 class="about-languages-title">Langues parlées</h2>
@@ -298,6 +298,9 @@
 
     <div class="experience" id="experience">
         <div class="rotate-card">
+            <div class="rotate-content"></div>
+        </div>
+        <div class="rotate-card down">
             <div class="rotate-content"></div>
         </div>
         <div class="experience-cards">
