add circle rotate

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
     <!-- CSS Local -->
     <link rel="stylesheet" href="index.css">
     <!-- JS Local -->
-    <!-- <script src="scripts/loader.js" defer></script> -->
+    <script src="scripts/loader.js" defer></script>
     <script src="scripts/toggleMode.js" defer></script>
     <script src="scripts/nav.js" defer></script>
     <script src="scripts/experience.js" defer></script>
 </head>
 
 <body class="dark-mode">
-<!-- 
+
     <div class="loader">
         <div class="loader-load"></div>
         <div class="loader-bloc loader-left"></div>
         <div class="loader-bloc loader-right"></div>
-    </div> -->
+    </div>
 
     <div id="modal">
         <div class="card-don">
