--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="scripts/toggleMode.js" defer></script>
     <script src="scripts/nav.js" defer></script>
     <script src="scripts/experience.js" defer></script>
+    <script src="scripts/footer.js" defer></script>
 </head>
 
 <body class="dark-mode">
@@ -429,76 +430,76 @@
             </div>
             <div class="experience-cards-project">
                 <a href="https://camer-djoss.vercel.app/" target="_blank">
-                    <img src="projets/camerdjoss.png" alt="camerdjoss">
+                    <img src="projets/camerdjoss.webp" alt="camerdjoss">
                 </a>
                 <a href="https://twitter-clone-ten-flame.vercel.app/" target="_blank">
-                    <img src="projets/twitter-clone.png" alt="camerdjoss">
+                    <img src="projets/twitter-clone.webp" alt="camerdjoss">
                 </a>
                 <a href="https://buy-nft.vercel.app/" target="_blank">
-                    <img src="projets/buynft.png" alt="buynft">
+                    <img src="projets/buynft.webp" alt="buynft">
                 </a>
                 <a href="https://login-page1.vercel.app/" target="_blank">
-                    <img src="projets/loginpage-1.png" alt="loginpage-1">
+                    <img src="projets/loginpage-1.webp" alt="loginpage-1">
                 </a>
                 <a href="https://github.com/ln-dev7/LN-Gram/" target="_blank">
-                    <img src="projets/clone-ui-ig.png" alt="clone-ui-ig">
+                    <img src="projets/clone-ui-ig.webp" alt="clone-ui-ig">
                 </a>
                 <a href="https://github.com/ln-dev7/ln-react-blog" target="_blank">
-                    <img src="projets/ln-react-blog.png" alt="ln-react-blog">
+                    <img src="projets/ln-react-blog.webp" alt="ln-react-blog">
                 </a>
                 <a href="https://app-expenses-delta.vercel.app/" target="_blank">
-                    <img src="projets/app-expenses.png" alt="app-expenses">
+                    <img src="projets/app-expenses.webp" alt="app-expenses">
                 </a>
                 <a href="https://pokedex-six-iota.vercel.app/" target="_blank">
-                    <img src="projets/pokedex.png" alt="pokedex">
+                    <img src="projets/pokedex.webp" alt="pokedex">
                 </a>
                 <a href="https://overthesea.vercel.app/" target="_blank">
-                    <img src="projets/overthesia.png" alt="overthesia">
+                    <img src="projets/overthesia.webp" alt="overthesia">
                 </a>
                 <a href="https://citation-generator.vercel.app/" target="_blank">
-                    <img src="projets/citation-generator.png" alt="citation-generator">
+                    <img src="projets/citation-generator.webp" alt="citation-generator">
                 </a>
                 <a href="https://fast-voitures.vercel.app/" target="_blank">
-                    <img src="projets/fast.png" alt="fast">
+                    <img src="projets/fast.webp" alt="fast">
                 </a>
                 <a href="https://app-meteo.vercel.app/" target="_blank">
-                    <img src="projets/app-meteo.png" alt="app-meteo">
+                    <img src="projets/app-meteo.webp" alt="app-meteo">
                 </a>
                 <a href="https://space-doge.vercel.app/" target="_blank">
-                    <img src="projets/spacedoge.png" alt="spacedoge">
+                    <img src="projets/spacedoge.webp" alt="spacedoge">
                 </a>
                 <a href="https://genuka-clone.vercel.app/" target="_blank">
-                    <img src="projets/genuka.png" alt="genuka">
+                    <img src="projets/genuka.webp" alt="genuka">
                 </a>
                 <a href="http://la-battle.vercel.app/" target="_blank">
-                    <img src="projets/labattle.png" alt="labattle">
+                    <img src="projets/labattle.webp" alt="labattle">
                 </a>
                 <a href="https://star-wars-lime.vercel.app/" target="_blank">
-                    <img src="projets/starwars.png" alt="starwars">
+                    <img src="projets/starwars.webp" alt="starwars">
                 </a>
                 <a href="https://mobile-club-home.vercel.app/" target="_blank">
-                    <img src="projets/mobileclub.png" alt="mobileclub">
+                    <img src="projets/mobileclub.webp" alt="mobileclub">
                 </a>
                 <a href="https://skillex-psi.vercel.app/" target="_blank">
-                    <img src="projets/skillex.png" alt="skillex">
+                    <img src="projets/skillex.webp" alt="skillex">
                 </a>
                 <a href="https://lndev-musicplayer.vercel.app/" target="_blank">
-                    <img src="projets/musicplayer.png" alt="musicplayer">
+                    <img src="projets/musicplayer.webp" alt="musicplayer">
                 </a>
                 <a href="https://space-tourism-ln-dev7.vercel.app/" target="_blank">
-                    <img src="projets/spacetourism.png" alt="spacetourism">
+                    <img src="projets/spacetourism.webp" alt="spacetourism">
                 </a>
                 <a href="https://dokita.vercel.app/" target="_blank">
-                    <img src="projets/dokita.png" alt="dokita">
+                    <img src="projets/dokita.webp" alt="dokita">
                 </a>
                 <a href="https://sharon-tega.vercel.app/" target="_blank">
-                    <img src="projets/sharontega.png" alt="sahrontega">
+                    <img src="projets/sharontega.webp" alt="sahrontega">
                 </a>
                 <a href="https://insure-lac.vercel.app/" target="_blank">
-                    <img src="projets/insure.png" alt="insure">
+                    <img src="projets/insure.webp" alt="insure">
                 </a>
                 <a href="https://loopsstudios.vercel.app/" target="_blank">
-                    <img src="projets/loopstudio.png" alt="loopstudio">
+                    <img src="projets/loopstudio.webp" alt="loopstudio">
                 </a>
             </div>
         </div>
@@ -559,10 +560,7 @@
                     <ion-icon name="logo-instagram"></ion-icon>
                 </a>
             </div>
-            <p> &copy; Codé par LN • Tout droits réservé • 2021 -
-                <script>
-                    document.write(new Date().getFullYear())
-                </script>
+            <p class="copyright"> 
             </p>
         </div>
     </footer>
