--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <meta name="twitter:site" content="@ln_dev7">
     <meta name="twitter:creator" content="@ln_dev7">
     <meta name="twitter:description" content="Développeur FrontEnd - Intégrateur Web,">
-    <meta name="twitter:image" content="img/ln.png">
-    <meta name="twitter:card" content="img/lndev.png">
+    <meta name="twitter:image" content="img/ln.webp">
+    <meta name="twitter:card" content="img/lndev.webp">
     <meta name="description" content="Développeur FrontEnd">
     <meta name="keywords" content="LN Developemrnt, NGOYA, Leonel, Développeur FrontEnd, Intégrateur Web, Camerounais">
     <!--Open Graph-->
-    <meta property="og:image" content="img/ln.png">
+    <meta property="og:image" content="img/ln.webp">
     <meta property="og:title" content="💻 NGOYA LEONEL️ 🌴️">
     <meta property="og:description" content="Je développe des sites et applications web responsive dans lesquels j'utilise mon inspiration pour avoir une interface belle et compréhensible par l'utilisateur tout en respectant les demandes des clients et dans certains cas en communiquant avec des API.">
     <meta name="author" content="NGOYA Leonel">
@@ -27,7 +27,7 @@
     <!-- Title -->
     <title>NGOYA Leonel • Développeur FrontEnd</title>
     <!-- Page Icon -->
-    <link rel="icon" sizes="76x76" href="img/logo.png">
+    <link rel="icon" sizes="76x76" href="img/logo.webp">
     <!-- Ionicon -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -170,7 +170,7 @@
     <header class="header" id="header">
         <div class="containers">
             <div class="header-img">
-                <img src="img/ln.png" alt="ma photo">
+                <img src="img/ln.webp" alt="ma photo">
             </div>
             <div class="header-container">
                 <h1 class="header-container-title">Salut, moi c'est Leonel NGOYA<img src="img/Hi.gif"></h1>
@@ -233,38 +233,36 @@
                         <ion-icon name="logo-css3"></ion-icon>
                         <ion-icon name="logo-sass"></ion-icon>
                         <ion-icon name="logo-javascript"></ion-icon>
-                        <span><img src="img/ts.png" alt="ts"></span>
-                        <span><img src="img/svelte.png" alt="svelte"></span>
-                        <span><img src="img/vue.png" alt="svelte"></span>
-                        <!-- <span><img src="img/vuerouter.png" alt="vue-router"></span>
-                        <span><img src="img/vuex.png" alt="vue-x"></span> -->
-                        <span><img src="img/react.png" alt="react"></span>
+                        <span><img src="img/ts.webp" alt="ts"></span>
+                        <span><img src="img/svelte.webp" alt="svelte"></span>
+                        <span><img src="img/vue.webp" alt="svelte"></span>
+                        <span><img src="img/react.webp" alt="react"></span>
                     </div>
                 </div>
                 <div class="skillest-cards-container-card">
                     <ion-icon name="phone-portrait" class="circle"></ion-icon>
                     <p>DEVELOPPEMENT MOBILE</p>
                     <div>
-                        <span><img src="img/flutter.png" alt="flutter"></span>
+                        <span><img src="img/flutter.webp" alt="flutter"></span>
                     </div>
                 </div>
                 <div class="skillest-cards-container-card">
                     <ion-icon name="bonfire" class="circle"></ion-icon>
                     <p>DEVELOPPEMENT LOGICIEL & BACKEND</p>
                     <div>
-                        <span><img src="img/csharp.png" alt="csharp"></span>
-                        <span><img src="img/php.png" alt="php"></span>
+                        <span><img src="img/csharp.webp" alt="csharp"></span>
+                        <span><img src="img/php.webp" alt="php"></span>
                     </div>
                 </div>
                 <div class="skillest-cards-container-card">
                     <ion-icon name="laptop-outline" class="circle"></ion-icon>
                     <p>OUTILS</p>
                     <div>
-                        <span><img src="img/firebase.png" alt="firebase"></span>
+                        <span><img src="img/firebase.webp" alt="firebase"></span>
                         <ion-icon name="logo-github"></ion-icon>
                         <ion-icon name="logo-figma"></ion-icon>
-                        <span><img src="img/vscode.png" alt="vscode"></span>
-                        <span><img src="img/webstorm.png" alt="webstorm"></span>
+                        <span><img src="img/vscode.webp" alt="vscode"></span>
+                        <span><img src="img/webstorm.webp" alt="webstorm"></span>
                     </div>
                 </div>
             </div>
@@ -321,7 +319,7 @@
                     <div class="answer">
                         <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
-                                <img src="img/freelance.png" alt="FREELANCE">
+                                <img src="img/freelance.webp" alt="FREELANCE">
                             </div>
                             <div class="experience-cards-container-card-container">
                                 <h3>FrontEnd Developer</h3>
@@ -351,7 +349,7 @@
                     <div class="answer">
                         <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
-                                <a href="https://market.lamater.net/" target="_blank"><img src="img/lamater.png" alt="LaMater"></a>
+                                <a href="https://market.lamater.net/" target="_blank"><img src="img/lamater.webp" alt="LaMater"></a>
                             </div>
                             <div class="experience-cards-container-card-container">
                                 <h3>Stagiaire FrontEnd Developer</h3>
@@ -384,7 +382,7 @@
                     <div class="answer">
                         <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
-                                <a href="https://afritechh.com/" target="_blank"><img src="img/afritechhub.png" alt="AfritechHub" style="width: 300px;"></a>
+                                <a href="https://afritechh.com/" target="_blank"><img src="img/afritechhub.webp" alt="AfritechHub" style="width: 300px;"></a>
                             </div>
                             <div class="experience-cards-container-card-container">
                                 <h3>Formateur Web</h3>
