--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <meta name="twitter:site" content="@ln_dev7">
     <meta name="twitter:creator" content="@ln_dev7">
     <meta name="twitter:description" content="Développeur FrontEnd - Intégrateur Web,">
-    <meta name="twitter:image" content="https://lndev.me/img/ln.webp">
-    <meta name="twitter:card" content="https://lndev.me/img/lndev.webp">
+    <meta name="twitter:image" content="img/ln.webp">
+    <meta name="twitter:card" content="img/lndev.webp">
     <meta name="description" content="Développeur FrontEnd">
     <meta name="keywords" content="LN Developemrnt, NGOYA, Leonel, Développeur FrontEnd, Intégrateur Web, Camerounais">
     <!--Open Graph-->
-    <meta property="og:image" content="https://lndev.me/img/ln.webp">
+    <meta property="og:image" content="img/ln.webp">
     <meta property="og:title" content="💻 NGOYA LEONEL️ 🌴️">
     <meta property="og:description" content="Je développe des sites et applications web responsive dans lesquels j'utilise mon inspiration pour avoir une interface belle et compréhensible par l'utilisateur tout en respectant les demandes des clients et dans certains cas en communiquant avec des API.">
     <meta name="author" content="NGOYA Leonel">
@@ -27,7 +27,7 @@
     <!-- Title -->
     <title>NGOYA Leonel • Développeur FrontEnd</title>
     <!-- Page Icon -->
-    <link rel="icon" sizes="76x76" href="https://lndev.me/img/logo.webp">
+    <link rel="icon" sizes="76x76" href="img/logo.webp">
     <!-- Ionicon -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -51,7 +51,7 @@
 
     <div id="modal">
         <div class="card-don">
-            <img class="don-close" src="https://lndev.me/img/close-circle-line.svg" alt="close">
+            <img class="don-close" src="img/close-circle-line.svg" alt="close">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
                 <path fill="none" d="M0 0h24v24H0z" />
                 <path
@@ -170,10 +170,10 @@
     <header class="header" id="header">
         <div class="containers">
             <div class="header-img">
-                <img src="https://lndev.me/img/ln.webp" alt="ma photo">
+                <img src="img/ln.webp" alt="ma photo">
             </div>
             <div class="header-container">
-                <h1 class="header-container-title">Salut, moi c'est Leonel NGOYA<img src="https://lndev.me/img/Hi.gif"></h1>
+                <h1 class="header-container-title">Salut, moi c'est Leonel NGOYA<img src="img/Hi.gif"></h1>
                 <h1 class="header-container-subtitle">Développeur FrontEnd</h1>
                 <h2>Ici c'est mon site personnel, où vous y trouverez toutes les informations me concernant.</h2>
             </div>
@@ -233,36 +233,36 @@
                         <ion-icon name="logo-css3"></ion-icon>
                         <ion-icon name="logo-sass"></ion-icon>
                         <ion-icon name="logo-javascript"></ion-icon>
-                        <span><img src="https://lndev.me/img/ts.webp" alt="ts"></span>
-                        <span><img src="https://lndev.me/img/svelte.webp" alt="svelte"></span>
-                        <span><img src="https://lndev.me/img/vue.webp" alt="svelte"></span>
-                        <span><img src="https://lndev.me/img/react.webp" alt="react"></span>
+                        <span><img src="img/ts.webp" alt="ts"></span>
+                        <span><img src="img/svelte.webp" alt="svelte"></span>
+                        <span><img src="img/vue.webp" alt="svelte"></span>
+                        <span><img src="img/react.webp" alt="react"></span>
                     </div>
                 </div>
                 <div class="skillest-cards-container-card">
                     <ion-icon name="phone-portrait" class="circle"></ion-icon>
                     <p>DEVELOPPEMENT MOBILE</p>
                     <div>
-                        <span><img src="https://lndev.me/img/flutter.webp" alt="flutter"></span>
+                        <span><img src="img/flutter.webp" alt="flutter"></span>
                     </div>
                 </div>
                 <div class="skillest-cards-container-card">
                     <ion-icon name="bonfire" class="circle"></ion-icon>
                     <p>DEVELOPPEMENT LOGICIEL & BACKEND</p>
                     <div>
-                        <span><img src="https://lndev.me/img/csharp.webp" alt="csharp"></span>
-                        <span><img src="https://lndev.me/img/php.webp" alt="php"></span>
+                        <span><img src="img/csharp.webp" alt="csharp"></span>
+                        <span><img src="img/php.webp" alt="php"></span>
                     </div>
                 </div>
                 <div class="skillest-cards-container-card">
                     <ion-icon name="laptop-outline" class="circle"></ion-icon>
                     <p>OUTILS</p>
                     <div>
-                        <span><img src="https://lndev.me/img/firebase.webp" alt="firebase"></span>
+                        <span><img src="img/firebase.webp" alt="firebase"></span>
                         <ion-icon name="logo-github"></ion-icon>
                         <ion-icon name="logo-figma"></ion-icon>
-                        <span><img src="https://lndev.me/img/vscode.webp" alt="vscode"></span>
-                        <span><img src="https://lndev.me/img/webstorm.webp" alt="webstorm"></span>
+                        <span><img src="img/vscode.webp" alt="vscode"></span>
+                        <span><img src="img/webstorm.webp" alt="webstorm"></span>
                     </div>
                 </div>
             </div>
@@ -314,12 +314,12 @@
                 <div class="faq-card active">
                     <div class="question">
                         <h3>TRAVAIL</h3>
-                        <img src="https://lndev.me/img/arrow-down.svg" alt="arrow-down">
+                        <img src="img/arrow-down.svg" alt="arrow-down">
                     </div>
                     <div class="answer">
                         <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
-                                <img src="https://lndev.me/img/freelance.webp" alt="FREELANCE">
+                                <img src="img/freelance.webp" alt="FREELANCE">
                             </div>
                             <div class="experience-cards-container-card-container">
                                 <h3>FrontEnd Developer</h3>
@@ -344,12 +344,12 @@
                 <div class="faq-card active">
                     <div class="question">
                         <h3>STAGE</h3>
-                        <img src="https://lndev.me/img/arrow-down.svg" alt="arrow-down">
+                        <img src="img/arrow-down.svg" alt="arrow-down">
                     </div>
                     <div class="answer">
                         <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
-                                <a href="https://market.lamater.net/" target="_blank"><img src="https://lndev.me/img/lamater.webp" alt="LaMater"></a>
+                                <a href="https://market.lamater.net/" target="_blank"><img src="img/lamater.webp" alt="LaMater"></a>
                             </div>
                             <div class="experience-cards-container-card-container">
                                 <h3>Stagiaire FrontEnd Developer</h3>
@@ -377,12 +377,12 @@
                 <div class="faq-card active">
                     <div class="question">
                         <h3>BENEVOLAT</h3>
-                        <img src="https://lndev.me/img/arrow-down.svg" alt="arrow-down">
+                        <img src="img/arrow-down.svg" alt="arrow-down">
                     </div>
                     <div class="answer">
                         <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
-                                <a href="https://afritechh.com/" target="_blank"><img src="https://lndev.me/img/afritechhub.webp" alt="AfritechHub" style="width: 300px;"></a>
+                                <a href="https://afritechh.com/" target="_blank"><img src="img/afritechhub.webp" alt="AfritechHub" style="width: 300px;"></a>
                             </div>
                             <div class="experience-cards-container-card-container">
                                 <h3>Formateur Web</h3>
@@ -402,7 +402,7 @@
                         <div class="line"></div>
                         <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
-                                <a href="https://mentor-moi.netlify.app/fr/mentors/623784765dada20004549229" target="_blank"><img src="https://lndev.me/img/mentor-moi.svg" alt="Mentor Moi" style="width: 300px;"></a>
+                                <a href="https://mentor-moi.netlify.app/fr/mentors/623784765dada20004549229" target="_blank"><img src="img/mentor-moi.svg" alt="Mentor Moi" style="width: 300px;"></a>
                             </div>
                             <div class="experience-cards-container-card-container">
                                 <h3>Mentor Dev Web</h3>
@@ -428,76 +428,76 @@
             </div>
             <div class="experience-cards-project">
                 <a href="https://camer-djoss.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/camerdjoss.webp" alt="camerdjoss">
+                    <img src="projets/camerdjoss.webp" alt="camerdjoss">
                 </a>
                 <a href="https://twitter-clone-ten-flame.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/twitter-clone.webp" alt="camerdjoss">
+                    <img src="projets/twitter-clone.webp" alt="camerdjoss">
                 </a>
                 <a href="https://buy-nft.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/buynft.webp" alt="buynft">
+                    <img src="projets/buynft.webp" alt="buynft">
                 </a>
                 <a href="https://login-page1.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/loginpage-1.webp" alt="loginpage-1">
+                    <img src="projets/loginpage-1.webp" alt="loginpage-1">
                 </a>
                 <a href="https://github.com/ln-dev7/LN-Gram/" target="_blank">
-                    <img src="https://lndev.me/projets/clone-ui-ig.webp" alt="clone-ui-ig">
+                    <img src="projets/clone-ui-ig.webp" alt="clone-ui-ig">
                 </a>
                 <a href="https://github.com/ln-dev7/ln-react-blog" target="_blank">
-                    <img src="https://lndev.me/projets/ln-react-blog.webp" alt="ln-react-blog">
+                    <img src="projets/ln-react-blog.webp" alt="ln-react-blog">
                 </a>
                 <a href="https://app-expenses-delta.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/app-expenses.webp" alt="app-expenses">
+                    <img src="projets/app-expenses.webp" alt="app-expenses">
                 </a>
                 <a href="https://pokedex-six-iota.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/pokedex.webp" alt="pokedex">
+                    <img src="projets/pokedex.webp" alt="pokedex">
                 </a>
                 <a href="https://overthesea.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/overthesia.webp" alt="overthesia">
+                    <img src="projets/overthesia.webp" alt="overthesia">
                 </a>
                 <a href="https://citation-generator.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/citation-generator.webp" alt="citation-generator">
+                    <img src="projets/citation-generator.webp" alt="citation-generator">
                 </a>
                 <a href="https://fast-voitures.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/fast.webp" alt="fast">
+                    <img src="projets/fast.webp" alt="fast">
                 </a>
                 <a href="https://app-meteo.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/app-meteo.webp" alt="app-meteo">
+                    <img src="projets/app-meteo.webp" alt="app-meteo">
                 </a>
                 <a href="https://space-doge.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/spacedoge.webp" alt="spacedoge">
+                    <img src="projets/spacedoge.webp" alt="spacedoge">
                 </a>
                 <a href="https://genuka-clone.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/genuka.webp" alt="genuka">
+                    <img src="projets/genuka.webp" alt="genuka">
                 </a>
                 <a href="http://la-battle.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/labattle.webp" alt="labattle">
+                    <img src="projets/labattle.webp" alt="labattle">
                 </a>
                 <a href="https://star-wars-lime.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/starwars.webp" alt="starwars">
+                    <img src="projets/starwars.webp" alt="starwars">
                 </a>
                 <a href="https://mobile-club-home.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/mobileclub.webp" alt="mobileclub">
+                    <img src="projets/mobileclub.webp" alt="mobileclub">
                 </a>
                 <a href="https://skillex-psi.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/skillex.webp" alt="skillex">
+                    <img src="projets/skillex.webp" alt="skillex">
                 </a>
                 <a href="https://lndev-musicplayer.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/musicplayer.webp" alt="musicplayer">
+                    <img src="projets/musicplayer.webp" alt="musicplayer">
                 </a>
                 <a href="https://space-tourism-ln-dev7.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/spacetourism.webp" alt="spacetourism">
+                    <img src="projets/spacetourism.webp" alt="spacetourism">
                 </a>
                 <a href="https://dokita.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/dokita.webp" alt="dokita">
+                    <img src="projets/dokita.webp" alt="dokita">
                 </a>
                 <a href="https://sharon-tega.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/sharontega.webp" alt="sahrontega">
+                    <img src="projets/sharontega.webp" alt="sahrontega">
                 </a>
                 <a href="https://insure-lac.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/insure.webp" alt="insure">
+                    <img src="projets/insure.webp" alt="insure">
                 </a>
                 <a href="https://loopsstudios.vercel.app/" target="_blank">
-                    <img src="https://lndev.me/projets/loopstudio.webp" alt="loopstudio">
+                    <img src="projets/loopstudio.webp" alt="loopstudio">
                 </a>
             </div>
         </div>
@@ -526,7 +526,7 @@
             </div>
             <div class="other-container-contact">
                 <div class="contact-card">
-                    <img src="https://lndev.me/img/leonel.webp" alt="leonel ngoya">
+                    <img src="img/leonel.webp" alt="leonel ngoya">
                     <div class="card-text">
                             <a href="mailto:leonelngoya@gmail.com" target="_blank">
                             Message
