--- a/index.html
+++ b/index.html
@@ -208,9 +208,8 @@
         <div class="about-hobbies">
             <h3>
                 Je m'intéresse beaucoup aux séries de réflexion et de suspens, par ailleurs j'aime aussi beaucoup regarder le football. comme sport, je pratiquer le volley-ball.<br> Comme la majorité des développeurs, pour coder j'adore les endroits calme
-                avec une bonne musique, pour cela j'ai une playlist Spotify que j'écoute la plus part de mon temps.
+                avec une bonne musique, pour cela j'ai une <a href="https://open.spotify.com/playlist/1fciPOQsvJFvA22F9PeEOU?si=3a273df004d847ce" target="_blank">playlist Spotify</a> que j'écoute la plus part de mon temps.
             </h3>
-            <iframe src="https://open.spotify.com/embed/playlist/1fciPOQsvJFvA22F9PeEOU" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media" class="about-hobbies-playlist"></iframe>
         </div>
     </div>
 
