--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <link rel="icon" sizes="76x76" href="img/logo.webp">
     <!-- Ionicon -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Birthstone&family=Grey+Qo&family=Overpass&family=Parisienne&family=Poppins:wght@300;400;500&family=Roboto:wght@300;400&family=Ubuntu:wght@400;500&display=swap" rel="stylesheet">
     <!-- CSS Local -->
     <link rel="stylesheet" href="index.css">
     <!-- JS Local -->
